kubernetes/gatekeeper/constraints/block-nodeport.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-nodeport
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    scope: Namespaced
