kubernetes/gatekeeper/constraints/no-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRootUser
metadata:
  name: no-root-user
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    scope: Namespaced
